--- a/JobboardFront/src/app/navbar/navbar.component.html
+++ b/JobboardFront/src/app/navbar/navbar.component.html
@@ -11,8 +11,8 @@
   </ul>
 
   <div class="auth-buttons">
-    <a routerLink="/login" class="btn-outline">Login</a>
-    <a routerLink="/signup" class="btn-primary">Sign Up</a>
+    <a routerLink="/login" class="outline">Login</a>
+    <a routerLink="/signup" class="primary">Sign Up</a>
   </div>
 </nav>
 
